@@ -41,6 +41,16 @@ JOURNAL = "Journal of the Royal Statistical Society Series B",
 VOLUME = "60",
 PAGES = "271-293"}
 
+@ARTICLE{LEDIGABEL:2011,
+AUTHOR = "{Le Digabel}, S.",
+YEAR = "2011",
+TITLE = "Algorithm 909: NOMAD: Nonlinear optimization with the MADS algorithm",
+JOURNAL = "ACM Transactions on Mathematical Software",
+VOLUME = "37",
+NUMBER = "4",
+PAGES = "44:1-44:15"}
+
+
 @BOOK{LI_RACINE:2007,
 TITLE = "Nonparametric Econometrics: Theory and Practice",
 AUTHOR = "Li, Q. and J. Racine",
@@ -62,14 +72,21 @@ TITLE = "Additive Regression Splines With Irrelevant Categorical
 INSTITUTION = "McMaster University and Michigan State University",
 TYPE = "Working Paper"}
 
-@ARTICLE{LEDIGABEL:2011,
-AUTHOR = "{Le Digabel}, S.",
-YEAR = "2011",
-TITLE = "Algorithm 909: NOMAD: Nonlinear optimization with the MADS algorithm",
-JOURNAL = "ACM Transactions on Mathematical Software",
-VOLUME = "37",
-NUMBER = "4",
-PAGES = "44:1-44:15"}
+@ARTICLE{MASRY:1996a,
+AUTHOR = "Masry, E.",
+YEAR = "1996",
+TITLE = "Multivariate local polynomial regression for time series: uniform strong consistency and rates",
+JOURNAL = "Journal of Time Series Analysis",
+VOLUME = "17",
+PAGES = "571-599"}
+
+@ARTICLE{MASRY:1996b,
+AUTHOR = "Masry, E.",
+YEAR = "1996",
+TITLE = "Multivariate regression estimation: local polynomial fitting for time series",
+JOURNAL = "Stochastic Processes and Their Applications",
+VOLUME = "65",
+PAGES = "81-101"}
 
 @TECHREPORT{NOMAD,
 AUTHOR = "Abramson, M.A. and C. Audet and G. Couture and J.E. {Dennis Jr.} and S. {Le Digabel}",
